Resolved some mobile layout issues

--- a/public/main.less
+++ b/public/main.less
@@ -70,3 +70,13 @@ footer {
 	margin: 1em 0;
 	font-size: 75%;
 }
+
+@media screen and (max-width: 630px) {
+	.site-header h1 {
+		line-height: 1;
+		font-size: 100%;
+	}
+	.site-header img {
+		width: 2em;
+	}
+}
